# TaskQuest

./: CODE_REVIEW_REPORT.md  README.md  TASKQUEST-OVERVIEW.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: catalog.rs  db.rs  errors.rs  lib.rs  models.rs
src/components/: ErrorToast.tsx  PageTransition.tsx
src/components/Achievements/: AchievementShowcase.tsx
src/components/Calendar/: CalendarBoard.tsx  CalendarQuickAdd.tsx
src/components/Catalog/: SkillCatalog.tsx
src/components/Chains/: QuestChains.tsx
src/components/Equipment/: Equipment.tsx
src/components/Feedback/: AchievementPopup.tsx  Confetti.tsx  FloatingReward.tsx  LevelUpOverlay.tsx  ShortcutHelp.tsx  UndoToast.tsx  XpFlyup.tsx
src/components/Focus/: AmbientFocus.tsx
src/components/Habits/: HabitTracker.tsx
src/components/HeroStatus/: HeroStatus.tsx
src/components/Home/: Home.tsx
src/components/Journal/: Journal.tsx
src/components/Onboarding/: DataRecoveryDialog.tsx  Tutorial.tsx
src/components/QuestBoard/: DailyChallenges.tsx  FocusMode.tsx  KanbanView.tsx  PomodoroBar.tsx  QuestBoard.tsx  QuickCapture.tsx  StatsBar.tsx  SubTaskList.tsx  TaskCard.tsx
src/components/QuestLog/: AddQuestForm.tsx
src/components/Settings/: Settings.tsx
src/lib/: achievement-progress.ts  ambience.ts  milestones.ts  notifications.ts  quotes.ts  seasonal.ts  skill-tree.ts  sounds.ts  themes.ts
src/store/: index.ts
src/types/: catalog.ts  features.ts  game.ts  index.ts  profile.ts  quest.ts  skill.ts
(+17 files in other folders)
