[package]
name = "taskquest"
version = "0.1.0"
description = "A gamified task management desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
